<resources>
    <string name="app_name">DaRts</string>
    <string name="startpage_img_dartboardlogo">Dartboard logo</string>
    <string name="startpage_textfield_text_email">Email</string>
    <string name="startpage_textfield_text_password">Password</string>
    <string name="startpage_button_text_login">Login</string>
    <string name="startpage_textview_title_registerHere">No account? Register here</string>
    <string name="no_network">There is no network access. Try again later</string>
    <string name="menu_item_join_game_text">Join Game</string>
    <string name="menu_item_active_games_text">Active Games</string>
    <string name="menu_item_overview_text">Overview</string>
    <string name="no_network_message_text">Er is geen netwerk beschikbaar, probeer later opnieuw</string>
    <string name="active_games_title_text">Active Games</string>
    <string name="no_active_games_data">You currently don\'t have any active games</string>
    <string name="game_name_placeholder_text">Game Name</string>
    <string name="game_description_placeholder_text">Game Description</string>
</resources>
